2006-02-04  David Bateman  <dbateman@free.fr>

	* COLAMD: Remove all files, as now unused.

2006-01-31  John W. Eaton  <jwe@octave.org>

	* Sparse.h (Sparse<T>::nzmax): New function.
	(Sparse<T>::nnz): Rename from nonzero.
	Change all uses of old nnz function to be nzmax.  Change all uses
	of nonzero to be nnz.
	(Sparse<T>::nzmx): Rename from nnz (data member).  Change all uses.

2006-01-21  David Bateman  <dbateman@free.fr>

        * sparse-sort.cc (bool octave_sparse_sidxl_comp): 64-bit fix.
        (bool octave_idx_vector_comp): New function.
        (template class octave_sort<octave_idx_vector_sort *>): Instantiate
        indexed idx_vector sorting function.
        * sparse-sort.h (class octave_sparse_sort_idxl): 64-bit fix.
        (class octave_idx_vector_sort): New class for indexed idx_vector
        sorting.
        (bool octave_idx_vector_comp): Declaration.
        * Sparse.cc (int assign1(Sparse<LT>&, Sparse<RT>&)): Treat cases of
        unordered LHS indexes in assignment using new octave_idx_vector_sort
        class.
        (int assign(Sparse<LT>&, Sparse<RT>&)): ditto.

2006-01-30  John W. Eaton  <jwe@octave.org>

	* so-array.h (streamoff_array::nnz): New funtion.
	* boolNDArray.h (boolNDArray::nnz): New function.
	* MArrayN.h (MArrayN<T>::nnz): New function.
	* MArray.h (MArray<T>::nnz): New function.

2006-01-04  David Bateman  <dbateman@free.fr>

	* Spars-op-defs.h (SPARSE_SPARSE_MUL): Previous change resulted in
	elements not being sorted in return matrix. Sort them, and make
	solver select between two algorithms to further improve the 
	performance.
	* dSparse.cc: include oct-sort.h.
	* CSparse.cc: ditto.
	* sparse-sort.cc: Instantiate octave_sort<octave_idx_type>.
	
2005-12-28  David Bateman  <dbateman@free.fr>

	* Sparse-op-defs.h (SPARSE_SPARSE_MUL): Improved algorithm that is
	faster in all cases, and significantly so for low density or small 
	order problems.

2005-11-30  John W. Eaton  <jwe@octave.org>
