@@ -79,9 +79,6 @@ extern dim_vector short_freeze (Array<idx_vector>& ra_idx,
 				const dim_vector& dimensions,
 				int resize_ok);
 
-extern Array<octave_idx_type> calc_permutated_idx (const Array<octave_idx_type>& old_idx, 
-				       const Array<octave_idx_type>& perm_vec, bool inv);
-
 extern void gripe_nonconformant (const char *op, int op1_len, int op2_len);
 
 extern void gripe_nonconformant (const char *op, int op1_nr, int op1_nc,
